<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.helloworld.ContextMenuScrollingText">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_copy"
        android:orderInCategory="11"
        android:title="@string/action_copy"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_paste"
        android:orderInCategory="12"
        android:title="@string/action_paste"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="10"
        android:title="@string/action_edit"
        app:showAsAction="never" />
</menu>
